2000-07-30  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* scheduler/msgerror.c:
	    Missed variable inits, and malformed format statement.

	* transports/smtp/getmxrr.c:
	    dnscache by djb produces replies which don't have NS or AD
	    sections, and when scanning replies, we had one-off comparison
	    error which bailed out in case the ANSWER section reached
	    the end of the reply packet.

	* man/scheduler.8:
	    Updating on data formats and communication protocols.

	* transports/libta/lockaddr.c:
	    Be carefull as *not* to overwrite part of diagnostic
	    data with spaces.  This has never been a bug, except
	    that trying to understand some aspects of the system
	    while updating documents revealed that we do unnecessary
	    scrubbing there.

2000-07-29  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/Makefile.in, transports/smtp/smtp.h,
	  transports/smtp/smtp.c, transports/smtp/getmxrr.c:
	    Moved  getmxrr()  function to separate file, and
	    wrapped it with a test shell in attempt to understand
	    *why* it seems to fail at some inputs at some machines.

	* scheduler/msgerror.c:
	    Hooks for "expanded" action status.

	* transports/smtp/smtp.c:
	    Streamlined error handling when returning from getmxrr().

2000-07-27  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    - At getmxrr() a missed state variable initialization
	      (to zero) caused errorneous eternal loops. OOPS!
	    - smtp_sync() didn't handle RCPTSTATE_500 at all.. (oops).
	    - calls to  stashmyaddresses()  don't need to carry determined
	      self-host-identity.

2000-07-24  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* scheduler/msgerror.c:
	    A simple spelling error in normally invisible text sent
	    towards the user inside the delivery status reports.

2000-07-18  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Possibly  ssfgets()  fell on over-by-one allocation/storage